[Win] Visual Studio workaround for compiling WebGL. https://bugs.webkit.org/show_bug.cgi?id=125808

Reviewed by Darin Adler.

* platform/graphics/GraphicsContext3D.cpp:
Don't inline outermost function to prevent Visual Studio crash.



Canonical link: https://commits.webkit.org/143870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160713 268f45cc-cd09-0410-ab3c-d52691b4dbfc